# IssueLab

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: agent.yml  arxiv_monitor.yml  auto_close_stale_issues.yml  dispatch_agents.yml  merge_agent_pr.yml  observer.yml  orchestrator.yml  personal_agent_scan.yml  sync-upstream.yml  user_agent.yml
agents/: README.md
agents/rojasraleena-svg/: agent.yml  prompt.md
config/: output_templates.yml  response_format.yml
docs/: ARCHITECTURE.md  COLLABORATION_FLOW.md  DEPLOYMENT.md  PERSONAL_AGENT_SCAN.md  PROJECT_GUIDE.md  TECHNICAL_DESIGN.md  TESTING_TRIGGERS.md  USER_AGENT_SETUP.md
prompts/: moderator.md  observer.md  reviewer_a.md  reviewer_b.md  summarizer.md
scripts/: README.md  monitor_arxiv.py  validate_agent_pr.py
src/issuelab/: __main__.py  config.py  executor.py  observer_trigger.py  personal_scan.py  response_processor.py  sdk_executor.py
src/issuelab/agents/: __init__.py  config.py  discovery.py  executor.py  observer.py
src/issuelab/cli/: dispatch.py
src/issuelab/tools/: github.py
src/issuelab/utils/: mentions.py
tests/: test_agents.py  test_cli.py  test_custom_agents.py  test_executor.py  test_github.py  test_gqy20_pipeline.py  test_integration.py  test_main.py  test_observer_trigger.py  test_prompts.py  test_response_processor.py  test_sdk_executor.py  test_sdk_timeout.py  test_workflow.py  test_workflow_optimization.py
