[project]
name = "issuelab"
version = "0.1.0"
description = "AI 辅助科研评审系统"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.27",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "pytest-cov>=7.0.0"]
dev = ["ruff>=0.8.0", "mypy>=1.13.0"]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/issuelab"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
